--- a/Source/Podfile
+++ b/Source/Podfile
@@ -1,9 +1,9 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
-
 workspace 'Workspace.xcworkspace'
 
 target 'App' do
-	project 'App/App.xcodeproj'
-	use_frameworks!
+  project 'App/App.xcodeproj'
+  platform :ios, '13.0'
+  use_frameworks!
+  #pod 'RealmSwift'
+  #pod 'Alamofire'
 end
